// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserList > should render loading 1`] = `
<div>
  <div
    class="_loading_e67a4d"
  >
    <div
      class="_loader_e67a4d"
    />
  </div>
</div>
`;

exports[`UserList > should render server error 1`] = `
<div>
  <div
    class="_error_e67a4d"
  >
    Server Error
  </div>
</div>
`;

exports[`UserList > should render user list 1`] = `
<div>
  <div
    class="_UserList_e67a4d"
  >
    <div
      class="_loading_fdfca4"
    >
      <div
        class="_loader_fdfca4"
      />
    </div>
    <div
      class="_loading_fdfca4"
    >
      <div
        class="_loader_fdfca4"
      />
    </div>
    <div
      class="_loading_fdfca4"
    >
      <div
        class="_loader_fdfca4"
      />
    </div>
  </div>
</div>
`;
